core/include/idtx_core/idtx_core.h

// Returns a NUL-terminated semver string baked at build time. Stable
// pointer — callers must not free.
IDTX_CORE_API const char* idtx_core_version(void);
// ---------------------------------------------------------------------
// Opaque handle types.
// Every public function takes/returns these as pointers; the underlying
// layout is private to libidtx_core and may change without breaking ABI.
// ---------------------------------------------------------------------

typedef struct idtx_skeleton         idtx_skeleton_t;
typedef struct idtx_mesh             idtx_mesh_t;
typedef struct idtx_material         idtx_material_t;
typedef struct idtx_avatar           idtx_avatar_t;
// ---------------------------------------------------------------------
// idtx_skeleton — bone hierarchy with rest + bind transforms.
//   * rest transform: local pose relative to parent bone (Godot's
//                     skeleton->get_bone_rest equivalent).
//   * bind transform: global pose at the avatar's bind moment (Godot's
//                     skeleton->get_bone_global_rest equivalent).
// Transforms are row-major float[16] matrices in the avatar's coordinate
// system. The skeleton's own root transform sits on the avatar handle,
// not here.
// ---------------------------------------------------------------------

IDTX_CORE_API idtx_skeleton_t* idtx_skeleton_create(void);
IDTX_CORE_API int32_t idtx_skeleton_add_bone(
    idtx_skeleton_t* skel,
    const char* name,
    int32_t parent_index,        // -1 for root bones
    const float rest_matrix[16],
    const float bind_matrix[16]);
// ---------------------------------------------------------------------
// idtx_mesh — vertex / index / skinning data for a single mesh surface.
// Multi-surface meshes are represented as multiple idtx_mesh_t handles
// owned by the avatar.
//
// All arrays are caller-owned at set time; the mesh copies internally.
// Layouts:
//   positions: vertex_count * 3 floats (x,y,z)
//   normals:   vertex_count * 3 floats (x,y,z) — pass NULL to skip
//   uvs:       vertex_count * 2 floats (u,v)   — pass NULL to skip
//   colors:    vertex_count * 4 floats (r,g,b,a) — pass NULL to skip
//   indices:   index_count    int32s (triangle list)
//
// Skinning is set separately: bones_per_vertex is typically 4. Layout:
//   bone_indices: vertex_count * bones_per_vertex int32s
//   weights:      vertex_count * bones_per_vertex floats (summed to 1)
// ---------------------------------------------------------------------

IDTX_CORE_API idtx_mesh_t* idtx_mesh_create(void);
IDTX_CORE_API void idtx_mesh_set_vertices(
    idtx_mesh_t* mesh,
    int32_t vertex_count,
    const float* positions,   // required
    const float* normals,     // optional, NULL ok
    const float* uvs,         // optional, NULL ok
    const float* colors);     // optional, NULL ok
IDTX_CORE_API void idtx_mesh_set_indices(
    idtx_mesh_t* mesh,
    int32_t index_count,
    const int32_t* indices);
IDTX_CORE_API idtx_material_t* idtx_material_create(void);
// PBR baseline
IDTX_CORE_API void idtx_material_set_base_color(idtx_material_t* mat, float r, float g, float b, float a);
// ---------------------------------------------------------------------
// idtx_avatar — the top-level container.
//
// Ownership: the avatar OWNS its handles. Adding a handle transfers
// ownership; destroying the avatar frees all attached handles. Pass
// NULL to add_* to detach a slot.
//
// Mesh-to-material binding is by index — material_index[i] is the
// material attached to mesh[i] (or -1 for none).
// Mesh-to-skeleton binding is implicit (single skeleton per avatar
// in this MVP; multi-skeleton support can land if/when needed).
// ---------------------------------------------------------------------

IDTX_CORE_API idtx_avatar_t* idtx_avatar_create(void);
IDTX_CORE_API void           idtx_avatar_destroy(idtx_avatar_t* avatar);
IDTX_CORE_API void        idtx_avatar_set_name(idtx_avatar_t* avatar, const char* name);
// Root transform: avatar's pose relative to its containing world.
IDTX_CORE_API void idtx_avatar_set_root_transform(idtx_avatar_t* avatar, const float matrix[16]);
// Source USD stage this avatar was imported from, recorded by
// idtx_core_import_avatar_from_usd. The layer-aware exporter
// (idtx_core_export_avatar_to_usd_ex) falls back to this path when its
// opts.source_path is NULL, so an import→export round-trip authors
// deltas against the originating stage without the host re-supplying it.
// Empty string = avatar was not imported from USD (authored in-host or
// from VRM). Setting it transfers no ownership; the string is copied.
IDTX_CORE_API void        idtx_avatar_set_source_usd_path(idtx_avatar_t* avatar, const char* path);
IDTX_CORE_API const char* idtx_avatar_get_source_usd_path(const idtx_avatar_t* avatar);
// Skeleton — at most one. Replacing destroys the previous skeleton.
IDTX_CORE_API void idtx_avatar_set_skeleton(idtx_avatar_t* avatar, idtx_skeleton_t* skel);
// Mesh list. Returns the index assigned. material_index pairs the mesh
// with the avatar's material slot at that index (or -1).
IDTX_CORE_API int32_t idtx_avatar_add_mesh(idtx_avatar_t* avatar, idtx_mesh_t* mesh, int32_t material_index);
// Material list.
IDTX_CORE_API int32_t idtx_avatar_add_material(idtx_avatar_t* avatar, idtx_material_t* mat);
// ---------------------------------------------------------------------
// Top-level I/O entry points.
//
// Returns 0 on success, non-zero on failure. Error categories:
//   1 = invalid argument (NULL avatar / NULL path)
//   2 = USD stage creation failed (e.g. unwritable path)
//   3 = USD write failed (Save() returned false)
// ---------------------------------------------------------------------

IDTX_CORE_API int32_t idtx_core_export_avatar_to_usd(
    const idtx_avatar_t* avatar,
    const char* path);
// ---------------------------------------------------------------------
// Layer-aware USD export (the round-trip / composition-aware path).
//
// idtx_core_export_avatar_to_usd() above is the destructive flat write:
// it CreateNew()s a single-layer stage and authors every prim fresh.
// That loses the layer structure of a stage the avatar was imported
// from — references, payloads, and sublayer routing all collapse.
//
// _ex() is a strict superset. With mode=IDTX_USD_NEW_FLAT and
// source_path=NULL it is byte-for-byte identical to the flat call
// (which is in fact implemented as a forwarder to this function). The
// other three modes consult `source_path` — the stage the avatar was
// imported from — and author the avatar's data as deltas against it:
//
//   IDTX_USD_NEW_FLAT   Fresh single-layer stage. `source_path` ignored.
//                       The legacy behaviour.
//   IDTX_USD_OVERLAY    Open `source_path`, author changed attributes as
//                       `over` opinions on a NEW root layer that sublayers
//                       the source. References/payloads in the source are
//                       preserved; only deltas are written to `path`.
//   IDTX_USD_LAYER_ONLY Write ONLY the delta layer to `path`; the source
//                       is pulled in by a composition REFERENCE arc on the
//                       avatar root (not a sublayer), so the delta is a
//                       standalone stage that incorporates the source
//                       asset. The thinnest artifact.
//
// OVERLAY and LAYER_ONLY differ only in that arc — OVERLAY sublayers the
// source, LAYER_ONLY references it. Both are delta-minimised: the full
// avatar is authored, then every opinion equal to the composed source —
// attribute values, attribute connections, AND relationship targets
// (e.g. material:binding) — is erased and the surviving prims flip from
// `def` to `over`, so an unchanged import->export round-trip yields a
// delta with no prim opinions at all (just the arc to the source).
//   IDTX_USD_FLATTEN    Compose `source_path` + the avatar's deltas, then
//                       flatten the whole layer stack into a single
//                       standalone stage at `path`. References/payloads
//                       are resolved inline.
//
// `edit_target_id`: for a composed source with multiple sublayers, names
// which sublayer the `over` opinions route to (the layer's identifier as
// returned by import-side provenance). NULL = the root/strongest layer.
//
// `reflect_per_prim`: 0 authors the avatar subtree as a unit; 1 mirrors
// each imageable prim individually so callers can edit Xform prims in
// isolation (answers the per-prim-editability question in upstream
// idtx-flow#18 consideration 1).
//
// Provenance: when `source_path` is NULL but the avatar carries an
// imported source path (stamped by idtx_core_import_avatar_from_usd),
// that path is used automatically. An explicit `source_path` overrides.
//
// Error codes extend the flat path:
//   0 = success                 3 = USD write (Save/Export) failed
//   1 = invalid argument        4 = source_path open failed
//   2 = stage creation failed   5 = requested edit_target_id not found
// ---------------------------------------------------------------------

typedef enum idtx_usd_export_mode
{
    IDTX_USD_NEW_FLAT   = 0,  // fresh single-layer stage (legacy default)
    IDTX_USD_OVERLAY    = 1,  // deltas as `over`s on a layer that sublayers source
    IDTX_USD_LAYER_ONLY = 2,  // write only the delta layer; it references source
    IDTX_USD_FLATTEN    = 3,  // compose source + deltas, flatten to standalone
    IDTX_USD_MODE_MAX   = 4,  // sentinel: count of modes / bounds check (Godot convention)
} idtx_usd_export_mode_t;
typedef struct idtx_usd_export_opts
{
    idtx_usd_export_mode_t mode;            // default IDTX_USD_NEW_FLAT
    const char*            source_path;     // imported-from stage; NULL = use avatar provenance / none
    const char*            edit_target_id;  // sublayer to route overs to; NULL = root layer
    int32_t                reflect_per_prim;// 0 = subtree as a unit, 1 = per imageable prim
} idtx_usd_export_opts_t;
// Convenience initializer — sets mode=IDTX_USD_NEW_FLAT and all pointers
// NULL / counts 0. Function (not a header struct literal) for the same
// reason idtx_scn_opts_init is: C forbids non-const file-scope struct
// initializers in a header cleanly.
IDTX_CORE_API void idtx_usd_export_opts_init(idtx_usd_export_opts_t* opts);
// Layer-aware export. `opts` NULL = flat defaults (legacy behaviour).
IDTX_CORE_API int32_t idtx_core_export_avatar_to_usd_ex(
    const idtx_avatar_t* avatar,
    const char* path,
    const idtx_usd_export_opts_t* opts);
// Open a USD stage at `path` and rebuild an idtx_avatar_t* from its
// default prim (or the first prim if no default is set). Returns NULL
// on failure (NULL path, open failed, no usable root prim). Caller
// owns the returned handle and frees with idtx_avatar_destroy.
IDTX_CORE_API idtx_avatar_t* idtx_core_import_avatar_from_usd(
    const char* path);
// ---------------------------------------------------------------------
// Library lifecycle.
//
// idtx_core_init() is idempotent and thread-safe. It performs one-time
// setup: prepends the shipped v_sekai_schema plugin directory to
// PXR_PLUGINPATH_NAME so the codeless API schema is discoverable in
// every host before any UsdStage::Open() call. Hosts SHOULD call this
// once at startup; calling it more than once is a no-op.
//
// `plugin_dir` overrides the default lookup (shared lib's neighbouring
// `share/idtx_core/` directory). Pass NULL to use the default.
//
// Returns 0 on success. Non-zero indicates the schema directory was
// not findable; the library still works, but `v_sekai:*` USD
// attributes will be opaque rather than schema-validated.
// ---------------------------------------------------------------------

IDTX_CORE_API int32_t idtx_core_init(const char* plugin_dir);